fix: font-size and spacing again...

--- a/product-preview-card-component-main/product-preview-card-component-main/sass/style.scss
+++ b/product-preview-card-component-main/product-preview-card-component-main/sass/style.scss
@@ -148,13 +148,13 @@ body {
             }
         }
         &__body{
+            margin-top: 1.5rem;
             display: flex;
             flex-direction: column;
-            gap: 2rem;
             height: 100%;
             &__info{
-                font-size: 1rem;
-                line-height: 1.25;
+                font-size: 1.25rem;
+                line-height: 1.3;
             }
             &__price{
                 font-size: 2rem;
